# phong-shading-experiment

./: .gitignore  CMakeLists.txt  build.sh  imgui.ini  run.sh
imgui/: CMakeLists.txt
src/: main.cpp
src/util/: util.h
